# cine-reserve-api

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
cine_reserve_api/: asgi.py  settings.py  urls.py  wsgi.py
cinema/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
cinema/fixtures/: rooms.json
cinema/management/commands/: setup_cinema.py
cinema/migrations/: 0001_initial.py  0002_alter_movie_title.py  0003_remove_movie_is_active_remove_seat_room_and_more.py  0004_alter_room_rows.py  0005_alter_movie_title_alter_room_name.py  0006_alter_room_rows_alter_seat_row.py
fixtures/: movies.json
